Adição da área do cliente no Menu

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             <a href="#pag-servicos"><b>SERVIÇOS</b></a>
             <a href="#pag-sobre"><b>SOBRE NÓS</b></a>
             <a href="#pag-contato"><b>CONTATO</b></a>
+            <a href="login.html" class="botao-portal"><b>ÁREA DO CLIENTE</b></a>
         </div>
 
         <div class="pesquisa-container" id="pesquisa-container">
@@ -36,6 +37,7 @@
         <a href="#pag-servicos"><b>SERVIÇOS</b></a>
         <a href="#pag-sobre"><b>SOBRE NÓS</b></a>
         <a href="#pag-contato"><b>CONTATO</b></a>
+        <a href="login.html" class="botao-portal-mobile"><b>ÁREA DO CLIENTE</b></a>
     </div>
 
     <button class="menu-hamburguer" id="menu-hamburguer" aria-label="Abrir menu">
@@ -277,3 +279,4 @@
 
 </body>
 </html>
+
